syntax = "proto3";

option java_multiple_files = true;
option java_package = "gosync.jayscomputing.com";
option java_outer_classname = "GoSync";

package gosync;

// The greeting service definition.
service GoSync {
    rpc JoinSession (JoinRequest) returns (JoinReply) {
    }
    rpc GetEvents (GetEventsRequest) returns (stream GSMessage) {
    }
    rpc PublishEvent(PublishRequest) returns (PublishResult) {
    }
}

message GetEventsRequest {
    Session session = 1;
    int32 guest_id = 2;
    int32 ntp_time_rtt = 5;
}
message GSMessage {
    int32 time = 1;
    string message = 4;
}

message Session {
    string session_id = 1;
    string session_name = 2;
    string ntp_host= 3;
}

message JoinRequest {
    string name = 1;
}

message JoinReply {
    Session session = 1;
    int32 guest_id = 2;
}

message PublishRequest {
    Session session = 1;
    GSMessage message = 2;
}

message PublishResult {

}
